<resources>
    <string name="app_name">B my friend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="menu_page">My Page</string>
    <string name="menu_contacts">My Contacts</string>
    <string name="menu_group">My Group</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_log">Log out</string>
    <string name="theme_switcher">Dark theme</string>


    <!-- logoutDialog -->
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="dialog_text">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <item name="id_for_message" type="id" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- Preference Titles -->
    <string name="messages_header"><font color='white' size='20'>Massage</font></string>
    <string name="sync_header"><font color='white' size='20'>Sync</font></string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title"><fond>Download incoming attachments</fond></string>
    <string name="attachment_summary_on"><fond>Automatically download attachments for incoming emails</fond></string>
    <string name="attachment_summary_off"><fond>Only download attachments when manually requested</fond></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Username must be >5 characters</string>
    <string name="login_failed">"Login failed , Sign In again"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="offline">offline</string>
    <string name="message">Message</string>
    <string name="or">OR</string>
    <string name="name_surname">Name Surname</string>
    <string name="temp_email">email@gmail.com</string>
    <string name="enter_email_of_your_account_for_sent_verify_code">Enter email of your account for sent verify code</string>
    <string name="check_email">Check Email</string>
    <string name="check_code">Check Code</string>
    <string name="enter_code_which_we_send_in_your_email">Enter code which we send in your email</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save_password">Save password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="invalidNewPassword">Password length is 5</string>
    <string name="invalidPasswordConfirm">Passwords are not the same</string>
    <string name="invalidCode">Code length is 7</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="follow">Follow</string>
    <string name="unFollow">Unfollow</string>
    <string name="fillInFiled">Please, fill in all fields</string>
    <string name="verify">Verify</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="time">time</string>
    <string name="dark_mode">Dark mode</string>
    <string name="yourDesc">Your description</string>
    <string name="nickname">Nickname</string>
</resources>
