<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_contacts">

    <fragment
        android:id="@+id/nav_page"
        android:name="com.example.b_my_friend.ui.page.MyPageFragment"
        tools:layout="@layout/fragment_my_page"
        android:label=""/>

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.b_my_friend.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_nav_contacts_to_addNewContactFragment"
            app:destination="@id/addNewContactFragment" />
        <action
            android:id="@+id/action_nav_contacts_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.b_my_friend.ui.groups.GroupsFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.b_my_friend.ui.setting.SettingsFragmentAppBar"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings_app_bar_t"/>

    <dialog
        android:id="@+id/nav_logout"
        android:name="com.example.b_my_friend.ui.LogoutDialogFragment" />

    <dialog
        android:id="@+id/addNewContactFragment"
        android:name="com.example.b_my_friend.ui.AddNewContactFragment"
        tools:layout="@layout/fragment_add_new_contact_list">
        <action
            android:id="@+id/action_addNewContactFragment_to_userPageFragment"
            app:destination="@id/UserPageFragment" />
    </dialog>
    <fragment
        android:id="@+id/UserPageFragment"
        android:name="com.example.b_my_friend.ui.page.UserPageFragment"
        tools:layout="@layout/fragment_user_page" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.b_my_friend.ui.chat.ChatFragment"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_chatFragment_to_UserPageFragment"
            app:destination="@id/UserPageFragment" />
    </fragment>
</navigation>