<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/user_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/user_page_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/user_page_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:gravity="center"
                android:layout_width="@dimen/half_screen"
                android:layout_height="@dimen/half_screen"
                android:layout_gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_page_avatar"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:civ_border_color="#FFFF"
                    app:civ_border_width="2dp"
                    android:src="@mipmap/temp_icon_round"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:id="@+id/user_page_nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFF"
                    android:textSize="26sp"/>
                <GridLayout
                    android:layout_marginTop="10dp"
                    android:columnCount="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/followersCount"
                        android:layout_columnWeight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"/>
                    <TextView
                        android:id="@+id/followingCount"
                        android:layout_columnWeight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/following"/>
                </GridLayout>
                <Button
                    android:id="@+id/follow"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:background="?attr/colorPrimaryDark"
                    android:text="@string/follow"/>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/feedTabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="#FFFF"
            android:background="@drawable/border"
            tools:targetApi="lollipop" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutNestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/feedViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
